# hello-sway

./: .gitignore  README.md
air-drop/: Cargo.toml  Forc.toml  set_up.rs
air-drop/air-drop/src/: events.sw  main.sw
air-drop/src/: errors.sw  events.sw  main.sw
air-drop/tests/: harness.rs  set_up.rs  tree.rs
apps/air-drop/: Cargo.toml
apps/air-drop/src/: errors.sw  events.sw  main.sw
apps/air-drop/tests/: harness.rs  set_up.rs  tree.rs
apps/counter/: Forc.toml
apps/multi-sig-wallet/: Cargo.toml
apps/nft/: Cargo.toml
apps/otc/: Cargo.toml
apps/wallet/: Forc.toml  (+1 more)
block_chain_types/: Forc.toml
blockchain-types/: Forc.toml
built-in-types/: Forc.toml
built_in_types/: Forc.toml
call/: Cargo.toml
constants/: Forc.toml
control-flow-if/: Forc.toml
control-flow-match/: Forc.toml
control_flow/: Forc.toml
counter/: Cargo.toml
counter_contract/: Forc.toml
fuels-ts-utils/: index.ts  package.json
function/: Forc.toml
functions/: Forc.toml
hello-deploy-cli/: README.md
liquidity-book/: Forc.toml
methods/: Forc.toml
multi-sig-wallet/: Cargo.toml
multi-sig-wallet/multi-sig-wallet/src/: errors.sw  events.sw  main.sw
multi-sig-wallet/src/: errors.sw  main.sw
multi-sig-wallet/test-contract/src/: main.sw
multi-sig-wallet/tests/: harness.rs
native_token/: Cargo.toml  Forc.toml
nft/: Cargo.toml  Forc.toml
options/: Forc.toml
otc/: Cargo.toml  Forc.toml
predicate/: Cargo.toml  Forc.toml
sig/: Cargo.toml
structs/: Forc.toml
structs_tuples_enums/: Forc.toml
subcurrency/: Forc.toml
test-token-transfer/: Cargo.toml  Forc.toml
variables/: Forc.toml
wallet/: Cargo.toml
wrapped_token/: Forc.toml
(+99 files in other folders)
