[package]
name = "counter"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["t4sk <tsk.nakamura@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.41", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
sha2 = { version = "0.10" }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
