[package]
name = "air-drop"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["t4sk <tsk.nakamura@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
# NOTE - test transfer fails for 0.42
fuels = { version = "0.41", features = ["fuel-core-lib"] }
fuel-merkle = { version = "0.32" }
sha2 = { version = "0.10" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
